[project]
name = "NVD_Dynamo_Sync"
version = "0.0.1"
authors = [
  { name="Kyle Pazandak", email="kyle@pazandak.com" },
]
description = "A package used to sync to Dynamo DB "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/PazDak/NVD-To-Dynamo-Tablet"
"Bug Tracker" = "https://github.com/PazDak/NVD-To-Dynamo-Table/issues"
